--- a/test.ipynb
+++ b/test.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import http.client\n",
-    "from config import IMDB_API_KEY\n",
+    "from config import IMDB_API_KEY \n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
     "# İlk isteği gönder\n",
-    "conn.request(\"GET\", \"/\", headers=headers)\n",
+    "conn.request(\"GET\",\"/\", headers=headers)\n",
     "\n",
     "# Yanıtı al\n",
     "response = conn.getresponse()\n"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
        "  'imdb_link': 'https://www.imdb.com/title/tt0022100'}]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,37 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Shawshank Redemption\n",
-      "1994\n",
-      "9.3\n",
-      "['Drama']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#deneme yaparak çıktıları görme\n",
-    "\n",
-    "#0. indisde bulunan filmin \n",
-    "# adı\n",
-    "print(imdb_top_100[0][\"title\"])\n",
-    "#yılı\n",
-    "print(imdb_top_100[0][\"year\"])\n",
-    "#aldığı oy\n",
-    "print(imdb_top_100[0][\"rating\"])\n",
-    "#türü\n",
-    "print(imdb_top_100[0][\"genre\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1302,7 @@
     }
    ],
    "source": [
-    "#keys:\n",
+    "#sütun isimleri\n",
     "print(imdb_top_100[0].keys())"
    ]
   },
@@ -1961,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -2164,13 +2134,251 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DataFrame'i Analiz Etme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 6)"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#satır, sütun sayısı\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           100 non-null    int64  \n",
+      " 1   title        100 non-null    object \n",
+      " 2   description  100 non-null    object \n",
+      " 3   genre        100 non-null    object \n",
+      " 4   rating       100 non-null    float64\n",
+      " 5   year         100 non-null    int64  \n",
+      "dtypes: float64(1), int64(2), object(3)\n",
+      "memory usage: 4.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()#data hakkında bilgi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id             0\n",
+       "title          0\n",
+       "description    0\n",
+       "genre          0\n",
+       "rating         0\n",
+       "year           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()#null değerlerin toplamı"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#id sütununu artan şekilde güncelleme\n",
+    "df['id'] = range(1, 101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>Two imprisoned men bond over a number of years...</td>\n",
+       "      <td>[Drama]</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>1994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>The aging patriarch of an organized crime dyna...</td>\n",
+       "      <td>[Crime, Drama]</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>1972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>[Action, Crime, Drama]</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>The Godfather Part II</td>\n",
+       "      <td>The early life and career of Vito Corleone in ...</td>\n",
+       "      <td>[Crime, Drama]</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>The jury in a New York City murder trial is fr...</td>\n",
+       "      <td>[Crime, Drama]</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1957</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                     title  \\\n",
+       "0   1  The Shawshank Redemption   \n",
+       "1   2             The Godfather   \n",
+       "2   3           The Dark Knight   \n",
+       "3   4     The Godfather Part II   \n",
+       "4   5              12 Angry Men   \n",
+       "\n",
+       "                                         description                   genre  \\\n",
+       "0  Two imprisoned men bond over a number of years...                 [Drama]   \n",
+       "1  The aging patriarch of an organized crime dyna...          [Crime, Drama]   \n",
+       "2  When the menace known as the Joker wreaks havo...  [Action, Crime, Drama]   \n",
+       "3  The early life and career of Vito Corleone in ...          [Crime, Drama]   \n",
+       "4  The jury in a New York City murder trial is fr...          [Crime, Drama]   \n",
+       "\n",
+       "  rating  year  \n",
+       "0    9.3  1994  \n",
+       "1    9.2  1972  \n",
+       "2    9.0  2008  \n",
+       "3    9.0  1974  \n",
+       "4    9.0  1957  "
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#güncelleme sonra ilk 5 satır\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rating kolonu float mı str mi kontrolü yapıldı\n",
+    "type(df['rating'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Görselleştirme"
    ]
   }
  ],
